<package>
 <name>s8_msgs</name>
  <version>0.0.0</version>
  <description>
    This package contains message (.msg) definitions for interfacing via the s8 nodes.
  </description>
  <license>BSD</license>

  <author email="lwiener@kth.se">Lucas Wiener</author>
  <maintainer email="lwiener@kth.se">Lucas Wiener</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>

</package>

